<resources>
    <string name="app_name">contactList</string>
    <string name="name">%1$s</string>
    <string name="number">%2$s</string>
    <string name="titleMsg">Contact List</string>
    <string name='requireMsg'>Let\'s us see your contacts!</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="star">*</string>
    <string name="lattice">#</string>
    <string name="back">←</string>
    <string name="backspace">⌫</string>
    <string name="call">call</string>
</resources>

